Refactor footer and add logo.ico

--- a/com.proj.web/index.html
+++ b/com.proj.web/index.html
@@ -6,8 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="pics/logo.ico" rel="shortcut icon" type="image/x-icon" />
 
-    <title>Title</title>
+    <title>Rozetka2</title>
 </head>
 <body>
 <div class="uppertxt">
@@ -40,7 +41,11 @@
         </div>
     </header>
     <main class="main">Hey Main</main>
-    <footer class="footer">Hey Footer</footer>
+    <footer>
+        <span class="left">All rights reserved &copy; 2023</span><span class="right">Social buttons
+        <img src="pics/telegram.png" alt="Telegram group" title="Telegram group"/></span>
+    </footer>
+    <!--<footer class="footer">Hey Footer</footer>-->
 </div>
 </body>
 </html>
